# DDos_Duo

./: CMakeLists.txt  HARDCODING_REMOVAL_SUMMARY.md  Makefile  attack.py  backend_manager.c  backend_manager.cpp  backend_manager.h  backend_manager.hpp  config.cpp  config.hpp  config.json  config.txt  dns.cpp  dns.hpp  dns_lb_common.h  dns_loadbalancer  dns_parser.c  dns_parser.h  dns_protocol.h  dns_server_fast.py  health_checker.c  health_checker.h  local_dns_server1.py  local_dns_server2.py  local_dns_server3.py  local_dns_server_fast.py  main.c  main.cpp  mock_dns_server.c  named.conf.bind  new.sh  performance_test.sh  queries.txt  shared.hpp  start_local_dns_servers.sh  stop_local_dns_servers.sh  test_dnsperf.sh  worker.cpp  worker.hpp
xdp/: Makefile  README.md  bpf_endian.h  bpf_helpers.h  dns_lb_kern.c  dns_lb_user.c  xdp_attach.sh  xdp_detach.sh
